--- a/README.rdoc
+++ b/README.rdoc
@@ -5,15 +5,24 @@ Rails drop in for Varnish support.
 == Install
 Basic installation
 
-  rails generate lacquer
+  rails generate lacquer install
 
 config/initializers/lacquer.rb
 
   Lacquer.configure do |config|
+    # Globally enable/disable cache
     config.enable_cache = true
+  
+    # Unless overridden in a controller or action, the default will be used
     config.default_ttl = 1.week
+  
+    # Can be :none, :delayed_job, :resque
     config.job_backend = :none
-    config.varnish_servers << { :host => '0.0.0.0', :port => 6082 }
+  
+    # Array of Varnish servers to manage
+    config.varnish_servers << { 
+      :host => '0.0.0.0', :port => 6082
+    }
   end
   
 app/controllers/application_controller.rb
