Updating the README.
Removed mentions of posterous left over from a previous merge.
Also made the VCL simpler. The goal is to get people started, not
scared.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,11 @@
 = lacquer
 
-Rails drop in for Varnish support. This version is adapted from Russ Smith's gem and is in production use on posterous.com.
+Rails drop in for Varnish support.
 
 == Install
 Basic installation
 
-  sudo gem install posterous-lacquer
+  sudo gem install lacquer
 
 config/initializers/lacquer.rb
 
@@ -20,15 +20,15 @@ config/initializers/lacquer.rb
     config.job_backend = :none
 
     # Array of Varnish servers to manage
-    config.varnish_servers << { 
-      :host => '0.0.0.0', :port => 6082
+    config.varnish_servers << {
+      :host => "0.0.0.0", :port => 6082
     }
 
     # Number of retries
     config.retries = 5
 
     # config handler (optional, if you use Hoptoad or another error tracking service)
-    config.command_error_handler = lambda {|s| HoptoadNotifier.notify(s) }
+    config.command_error_handler = lambda { |s| HoptoadNotifier.notify(s) }
   end
 
 app/controllers/application_controller.rb
@@ -72,49 +72,18 @@ As a result, all you have to do to set a cacheable action is the before filter a
 
 == VCL config
 
-  #-e This is a basic VCL configuration file for varnish.  See the vcl(7)
-  #man page for details on VCL syntax and semantics.
-  #
-  #Default backend definition.  Set this to point to your content
-  #server.
-  #
+  # -e This is a basic VCL configuration file for varnish.  See the vcl(7)
+  # man page for details on VCL syntax and semantics.
 
-  C{
-    #include <string.h> 
-    #include <stdlib.h> 
-    #include <stdio.h>
-  }C
-
+  # Default backend definition.  Set this to point to your content #server.
   backend default {
-  .host = "127.0.0.1";
-  .port = "8282";
-  .max_connections = 2000;
-  .connect_timeout = 600s;
-  .first_byte_timeout = 600s;
-  .between_bytes_timeout = 600s;
+    .host = "127.0.0.1";
+    .port = "8282";
   }
 
-  sub vcl_hash {
-    ### these 2 entries are the default ones used for vcl. Below we add our own.
-    set req.hash += req.url;
-    set req.hash += req.http.host;
-
-    # This will make sure that the mobile version of our site gets cached under a different hash
-    if (req.http.cookie ~ "mobile_view=true") {
-      set req.hash += "mobile";
-    }
-    if (req.http.user-agent ~ "(?i)palm|blackberry|nokia|phone|midp|mobi|symbian|chtml|ericsson|minimo|audiovox|motorola|samsung|telit|upg1|windows ce|ucweb|astel|plucker|x320|x240|j2me|sgh|portable|sprint|docomo|kddi|softbank|android|mmp|pdxgw|netfront|xiino|vodafone|portalmmm|sagem|mot-|sie-|ipod|up\\.b|webos|amoi|novarra|cdm|alcatel|pocket|iphone|mobileexplorer|mobile" && !(req.http.user-agent ~ "(?i)ipad") && !(req.http.cookie ~ "full_site=true")) {
-      set req.hash += "mobile";
-    }
-
-    return(hash);
-  }
-
-  #
   # Handling of requests that are received from clients.
   # First decide whether or not to lookup data in the cache.
-  #
-  sub vcl_recv {  
+  sub vcl_recv {
     # Pipe requests that are non-RFC2616 or CONNECT which is weird.
     if (req.request != "GET" &&
         req.request != "HEAD" &&
@@ -131,48 +100,8 @@ As a result, all you have to do to set a cacheable action is the before filter a
       return(pass);
     }
 
-    # Pass requests for blog pages greater than page 3
-    if (req.url ~ "page=([4-9]|[1-9][0-9]+)$") {
-      return(pass);
-    }
-
     # Pass requests that we know we aren't caching
     if (req.url ~ "^/admin") {
-      return(pass);
-    }
-
-    # Never cache private posts
-    if (req.url ~ "\/private\/") {
-      return(pass);
-    }
-
-
-    # Don't cache the result of a redirect
-    if (req.http.Referer ~ "jumpto" || req.http.Origin ~ "poster") {
-      return(pass);
-    }
-
-    # Since we don't site owners and contributors to view the 
-    # cached version of their site, we match a special cookie we set
-    # with the current host. This assures that site owners see
-    # private posts, while other users do not.
-    C{
-      char *host = VRT_GetHdr(sp, HDR_REQ, "\005Host:");
-      char *cookie = VRT_GetHdr(sp, HDR_REQ, "\007Cookie:");
-      char* result = NULL;
-      if (cookie == NULL) {
-        cookie = "";
-      }
-      if (host == NULL) {
-        host = "";
-      }
-      result = strstr(cookie, host);
-      if (result != NULL) {
-        VRT_SetHdr(sp, HDR_REQ, "\013X-No-Cache:", "YES", vrt_magic_string_end);
-      }
-    }C
-
-    if (req.http.X-No-Cache ~ "YES") {
       return(pass);
     }
 
@@ -198,15 +127,13 @@ As a result, all you have to do to set a cacheable action is the before filter a
     }
 
     # Clear cookie and authorization headers, set grace time, lookup in the cache
-    #unset req.http.Cookie;
-    #unset req.http.Authorization;
+    # unset req.http.Cookie;
+    # unset req.http.Authorization;
     set req.grace = 1s;
     return(lookup);
   }
 
-  #
   # Called when entering pipe mode
-  #  
   sub vcl_pipe {
     # If we don't set the Connection: close header, any following
     # requests from the client will also be piped through and
@@ -216,69 +143,37 @@ As a result, all you have to do to set a cacheable action is the before filter a
   }
 
 
-  #
   # Called when the requested object has been retrieved from the
   # backend, or the request to the backend has failed
-  #
   sub vcl_fetch {
-    # Comments are now fetched via ESI.
-    esi;
-
     # Do not cache the object if the backend application does not want us to.
-    if (beresp.http.Cache-Control ~ "(no-cache|no-store|private|must-revalidate)") {
-      return(pass);
+    if (obj.http.Cache-Control ~ "(no-cache|no-store|private|must-revalidate)") {
+      pass;
     }
 
     # Do not cache the object if the status is not in the 200s
-    if (beresp.status >= 300) {
+    if (obj.status >= 300) {
       # Remove the Set-Cookie header
-      #remove beresp.http.Set-Cookie;
+      remove obj.http.Set-Cookie;
       return(pass);
     }
 
-    #
     # Everything below here should be cached
-    #
-
-    # Don't cache the comments ESI
-    if (req.url ~ "\/posts\/comments") {
-      set beresp.ttl = 0s;
-    }
 
     # Remove the Set-Cookie header
-    remove beresp.http.Set-Cookie;
+    remove obj.http.Set-Cookie;
 
     # Set the grace time
-    set beresp.grace = 1s;
+    set obj.grace = 1s;
 
-    # Static assets aren't served out of Varnish just yet, but when they are, this will
-    # make sure the browser caches them for a long time.
-    if (req.url ~ "\.(css|js|jpg|jpeg|gif|ico|png)\??\d*$") {
-      /* Remove Expires from backend, it's not long enough */
-      unset beresp.http.expires;
-
-      /* Set the clients TTL on this object */
-      set beresp.http.cache-control = "public, max-age=31536000";
-
-      /* marker for vcl_deliver to reset Age: */
-      set beresp.http.magicmarker = "1";
-    } else {
-      set beresp.http.Cache-Control = "private, max-age=0, must-revalidate";
-      set beresp.http.Pragma = "no-cache";
-    }
-
-    # return(deliver); the object
-    return(deliver);
+    # Deliver the object
+    deliver;
   }
 
   sub vcl_deliver {
-    if (resp.http.magicmarker) {
-      /* Remove the magic marker */
-      unset resp.http.magicmarker;
-
-      /* By definition we have a fresh object */
-      set resp.http.age = "0";
-    }   
+    # Force browsers and intermediary caches to always check back with us
+    # set resp.http.Cache-Control = "private, max-age=0, must-revalidate";
+    # set resp.http.Pragma = "no-cache";
 
     # Add a header to indicate a cache HIT/MISS
     if (obj.hits > 0) {
@@ -291,13 +186,11 @@ As a result, all you have to do to set a cacheable action is the before filter a
 
 == Note on Patches/Pull Requests
 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+  * Fork the project.
+  * Make your feature addition or bug fix.
+  * Add tests for it. This is important so I don't break it in a future version unintentionally.
+  * Commit, do not mess with rakefile, version, or history.  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
+  * Send me a pull request. Bonus points for topic branches.
 
 == Copyright
 
