Adding support for authentication

--- a/README.rdoc
+++ b/README.rdoc
@@ -21,7 +21,7 @@ config/initializers/lacquer.rb
 
     # Array of Varnish servers to manage
     config.varnish_servers << {
-      :host => "0.0.0.0", :port => 6082
+      :host => "0.0.0.0", :port => 6082 # if you have authentication enabled, add :secret => "your secret"
     }
 
     # Number of retries
