--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+[![Build Status](https://secure.travis-ci.org/russ/lacquer.png?branch=master)](http://travis-ci.org/russ/lacquer)
+
 = lacquer
 
 Rails drop in for Varnish support.
