--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-[![Build Status](https://secure.travis-ci.org/russ/lacquer.png?branch=master)](http://travis-ci.org/russ/lacquer)
+{<img src="https://secure.travis-ci.org/russ/lacquer.png?branch=master" alt="Build Status" />}[http://travis-ci.org/russ/lacquer]
 
 = lacquer
 
